--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,22 @@ body {
 .section-navbar {
 }
 .section-hero {
+  overflow: hidden;
+  position: relative;
+}
+
+@media (max-width: 992px) {
+  .section-hero:before {
+    content: "";
+    /* background: black; */
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(0, 0, 0, 1));
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    opacity: 0.9;
+    left: 0px;
+  }
 }
 .section-hero .hero-background {
   background-image: url("../images/hero.png");
@@ -78,6 +94,15 @@ body {
   margin-bottom: 2rem;
   font-size: 1.32rem;
 }
+@media (max-width: 992px) {
+  .section-hero p {
+    color: whitesmoke;
+    /* background-image: linear-gradient(to left, #dbbb11, #fdcd0b);
+  border-radius: 50px; */
+    font-weight: bold;
+    /* padding: 0px 4px; */
+  }
+}
 .nz-text-gold {
   color: #fdcd0b;
 }
@@ -92,11 +117,89 @@ body {
   border-color: #fdcd0b;
   border-radius: 0px;
 }
+.section-title-centerd {
+  display: block;
+  text-align: center;
+  position: relative;
+  font-weight: bolder;
+  text-transform: uppercase !important;
+  font-size: 2.5rem;
+  margin-bottom: 9rem;
+}
+.section-title-centerd span {
+  position: relative;
+  padding-bottom: 1rem;
+}
+.section-title-centerd span:after {
+  content: "";
+  position: absolute;
+  width: 30%;
+  left: 33.3%;
+  bottom: 0px;
+  border-bottom: 2px #fdcd0b solid;
+}
+
+.section-title-side {
+  display: block;
+  text-align: left;
+  position: relative;
+  font-weight: bolder;
+  text-transform: uppercase !important;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+}
+/* .section-title-side span {
+  position: relative;
+} */
+.section-title-side:after {
+  content: "";
+  position: absolute;
+  width: 30%;
+  left: 0%;
+  bottom: 0px;
+  border-bottom: 2px #fdcd0b solid;
+}
+
+.hiw-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(to left, #dbbb11, #fdcd0b);
+  height: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  width: 40px;
+  min-width: 40px;
+  max-width: 40px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 1.2rem;
+}
+
+.nz-pill-gold {
+  background-image: linear-gradient(to left, #dbbb11, #fdcd0b);
+  border-radius: 50px;
+  font-weight: bold;
+  padding: 0px 4px;
+}
 
 .section-how-it-works {
 }
-.section {
+.section-how-it-works .how-it-works-item {
+  padding: 3rem;
 }
+.section-how-it-works .how-it-works-item .hiw-item-content img {
+  margin-bottom: 2rem;
+  /* height: 230px; */
+  max-width: 100%;
+  height: auto;
+}
+.section-how-it-works .how-it-works-item .hiw-item-content .hiw-text {
+  font-size: 0.9rem;
+  line-height: 2;
+}
+
 .section-our-services {
 }
 .section-client-feed-back {
