--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,7 +202,11 @@ body {
 
 .section-our-services {
 }
+
+
 .section-client-feed-back {
+}
+.section-client-feed-back .nz-clint-feebback-carousel {
 }
 .section-our-partiners {
 }
