--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,7 +90,7 @@ body {
   color: #fdcd0b;
 }
 .nz-btn-gold {
-  color: #fff;
+  color: #000;
   background-color: #fdcd0b;
   border-color: #fdcd0b;
   border-radius: 0px;
@@ -374,7 +374,6 @@ body {
   background-color: #f1f1f1;
 }
 
-
 @media (max-width: 992px) {
   .section-hero p {
     color: whitesmoke;
@@ -395,15 +394,19 @@ body {
     height: 100%;
     overflow: hidden;
     position: absolute;
-    opacity: 0.9;
+    opacity: 0.7;
     left: 0px;
     top: 0px;
   }
+  .section-contact-us .row div:last-child {
+    padding-top: 2rem;
+  }
+
   .footer-links.footer-img {
     text-align: center;
     margin-bottom: 3rem;
   }
 }
-.w-47{
+.w-47 {
   width: 47%;
 }
