--- a/assets/css/styles_rtl.css
+++ b/assets/css/styles_rtl.css
@@ -1,59 +1,3 @@
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/Poppins/Poppins-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: normal;
-  src: url("../fonts/Poppins/Poppins-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: bold;
-  src: url("../fonts/Poppins/Poppins-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: bold;
-  src: url("../fonts/Poppins/Poppins-BoldItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: bolder;
-  src: url("../fonts/Poppins/Poppins-SemiBold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: bolder;
-  src: url("../fonts/Poppins/Poppins-SemiBoldItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: lighter;
-  src: url("../fonts/Poppins/Poppins-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: lighter;
-  src: url("../fonts/Poppins/Poppins-LightItalic.ttf") format("truetype");
-}
-
 html,
 body {
   font-family: "Poppins";
@@ -65,10 +9,6 @@ body {
   margin-right: auto;
   margin-left: 0;
 }
-.section-hero {
-  overflow: hidden;
-  position: relative;
-}
 
 .section-hero .hero-background {
   background-image: url("../images/hero.png");
@@ -79,51 +19,6 @@ body {
   background-size: auto 100%;
   flex-direction: row-reverse;
 }
-.section-hero h1 {
-  line-height: 1.5;
-}
-.section-hero p {
-  margin-bottom: 2rem;
-  font-size: 1.32rem;
-}
-
-.nz-text-gold {
-  color: #fdcd0b;
-}
-.nz-btn-gold {
-  color: #fff;
-  background-color: #fdcd0b;
-  border-color: #fdcd0b;
-  border-radius: 0px;
-}
-.btn-outline-gold {
-  color: #fdcd0b;
-  border-color: #fdcd0b;
-  border-radius: 0px;
-}
-.section-title-centerd {
-  display: block;
-  text-align: center;
-  position: relative;
-  font-weight: bolder;
-  text-transform: uppercase !important;
-  font-size: 2.5rem;
-  margin-top: 2rem;
-  margin-bottom: 7rem;
-}
-.section-title-centerd span {
-  position: relative;
-  padding-bottom: 1rem;
-}
-.section-title-centerd span:after {
-  content: "";
-  position: absolute;
-  width: 30%;
-  left: 33.3%;
-  bottom: 0px;
-  border-bottom: 2px #fdcd0b solid;
-}
-
 .section-title-side {
   display: block;
   text-align: right;
@@ -134,9 +29,7 @@ body {
   margin-bottom: 2rem;
   padding-bottom: 1rem;
 }
-/* .section-title-side span {
-    position: relative;
-  } */
+
 .section-title-side:after {
   content: "";
   position: absolute;
@@ -146,51 +39,6 @@ body {
   border-bottom: 2px #fdcd0b solid;
 }
 
-.hiw-number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: linear-gradient(to left, #dbbb11, #fdcd0b);
-  height: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  width: 40px;
-  min-width: 40px;
-  max-width: 40px;
-  text-align: center;
-  border-radius: 50%;
-  font-size: 1.2rem;
-}
-
-.nz-pill-gold {
-  background-image: linear-gradient(to left, #dbbb11, #fdcd0b);
-  border-radius: 50px;
-  font-weight: bold;
-  padding: 0px 4px;
-}
-
-.has-ninjaz-face-left {
-  position: relative;
-}
-.has-ninjaz-face-left:after {
-  content: "";
-  background-image: url(../images/ninjaface.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  overflow: visible;
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  /* bottom: 0px; */
-  top: 80%;
-  /* left: -550px; */
-  right: 90%;
-}
-
-.has-ninjaz-face-right {
-  position: relative;
-  /* overflow: hidden; */
-}
 .has-ninjaz-face-right:after {
   content: "";
   background-image: url(../images/ninjaface.png);
@@ -204,177 +52,9 @@ body {
   top: 80%;
   right: 60%;
 }
-
-.section-how-it-works .how-it-works-item {
-  padding: 3rem;
-}
-.section-how-it-works .how-it-works-item .hiw-item-content img {
-  margin-bottom: 2rem;
-  /* height: 230px; */
-  max-width: 100%;
-  height: auto;
-}
-.section-how-it-works .how-it-works-item .hiw-item-content .hiw-text {
-  font-size: 0.9rem;
-  line-height: 2;
-}
-.section-how-it-works {
-  position: relative;
-}
-
-.section-our-services {
-}
-
-.section-client-feed-back {
-  /* background: gainsboro; */
-  position: relative;
-}
-.with-angle-bottom:after {
-  background: inherit;
-  bottom: 0px;
-  content: "";
-  display: block;
-  height: 65%;
-  left: 0;
-  position: absolute;
-  right: 0;
-  transform: skewY(-4deg);
-  transform-origin: 100%;
-  z-index: -1;
-  width: 100%;
-}
-
-.nz-client-feedback-carousel {
-}
-.nz-client-feedback-carousel {
-}
-.nz-client-feedback-carousel .carousel-indicators {
-  position: relative;
-  padding-top: 1rem;
-}
-.nz-client-feedback-carousel .carousel-indicators li {
-  width: 10px;
-  height: 10px;
-  background-color: black;
-  border-radius: 50%;
-  opacity: 1;
-  transition: background-color 1s ease;
-}
-.nz-client-feedback-carousel .carousel-indicators li.active {
-  background-color: #fdcd0b;
-}
-.nz-client-feedback-carousel .carousel-inner {
-  /* min-height: 500px; */
-}
-.nz-client-feedback-carousel .carousel-inner .carousel-item {
-  min-height: 260px;
-  height: fit-content;
-}
-.nz-client-feedback-carousel .carousel-inner .carousel-item .carousel-caption {
-  color: black;
-  text-align: left;
-  bottom: auto;
-}
-
-.section-our-partiners {
-}
 .section-our-partiners .section-our-partiners-carousel {
+  direction: ltr;
 }
-.section-our-partiners .section-our-partiners-carousel .owl-dots {
-  display: flex;
-  justify-content: center;
-  margin-top: 2rem;
-}
-.section-our-partiners .section-our-partiners-carousel .owl-dots .owl-dot {
-  display: block;
-  width: 10px;
-  height: 10px;
-  background-color: black;
-  border-radius: 50%;
-  margin: 0px 3px;
-}
-.section-our-partiners .section-our-partiners-carousel .owl-dots .owl-dot.active {
-  background-color: #fdcd0b;
-}
-.section-contact-us {
-}
-.section-contact-us .section-header {
-}
-.section-contact-us .section-header p {
-  color: #fdcd0b;
-  margin: 0px;
-}
-.section-contact-us .section-header h2 {
-  font-weight: bold;
-  margin-bottom: 2rem;
-}
-.section-contact-us .find-us-item {
-  display: flex;
-  /* justify-content: center; */
-  align-items: baseline;
-  margin-bottom: 1rem;
-}
-.section-contact-us .find-us-item p {
-  margin-bottom: 0px;
-}
-.section-contact-us .find-us-item .find-us-icon {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  width: 50px;
-  min-width: 50px;
-  max-width: 50px;
-  height: 50px;
-  min-height: 50px;
-  max-height: 50px;
-  border-radius: 50%;
-}
-.section-footer {
-}
-
-.footer-links.footer-img {
-  text-align: left;
-}
-
-.section-footer .footer-links ul {
-  list-style: none;
-}
-
-.section-footer .footer-links ul li {
-  margin-bottom: 1rem;
-  color: black;
-}
-.section-footer .footer-links ul li a {
-  color: black;
-}
-
-.m-5rem {
-  margin: 5rem;
-}
-
-.mapouter {
-  position: relative;
-  text-align: right;
-  height: 600px;
-  width: 100%;
-}
-
-.gmap_canvas {
-  overflow: hidden;
-  background: none !important;
-  height: 600px;
-  width: 100%;
-}
-
-.footer-copy {
-  background-color: #111;
-}
-.nz-bg-light-grey {
-  background-color: #f1f1f1;
-}
-
 @media (max-width: 992px) {
   .section-hero p {
     color: whitesmoke;
@@ -395,7 +75,7 @@ body {
     height: 100%;
     overflow: hidden;
     position: absolute;
-    opacity: 0.9;
+    opacity: 0.7;
     left: 0px;
     top: 0px;
   }
@@ -404,6 +84,6 @@ body {
     margin-bottom: 3rem;
   }
 }
-.w-47{
-    width: 47%;
-  }
+.w-47 {
+  width: 47%;
+}
