--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -423,7 +423,20 @@ body {
   background-position: right top;
   background-size: auto 100%;
 }
-.section-login-singnup .card{
+.section-login-singnup .card {
   background: rgba(255, 255, 255, 0.9);
   border: none;
+}
+
+.list-group .list-group-item.active {
+  background-color: #fdcd0b;
+  color: #000;
+  border: none;
+  font-weight: bold;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.recent-odrder-list{
+  height: 500px;
+  overflow-y: auto;
 }
