Update Dashboard and Services List

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -487,9 +487,15 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
-
+.card-hover {
+  text-decoration: none;
+}
+.card-hover:hover {
+  text-decoration: none;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
 .multi-steper .nav:before {
   content: "";
   position: absolute;
@@ -499,7 +505,7 @@ body {
   width: 95%;
   z-index: 0;
 }
-.multi-steper .nav .nav-item{
+.multi-steper .nav .nav-item {
   z-index: 1;
   margin: 0.5rem;
   display: flex;
@@ -507,7 +513,7 @@ body {
   align-items: center;
   height: 100%;
 }
-.multi-steper .nav .nav-item a{
+.multi-steper .nav .nav-item a {
   color: #000;
   background: #fff;
   border: 1px #eee solid;
