--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -429,7 +429,10 @@ body {
 }
 .side-navbar .list-group .list-group-item {
   transition: width 0.3s;
-  margin: 0.5rem;
+  margin: 0.5rem 0px;
+  display:flex;
+  align-items: center;
+  padding: 1.5rem 0rem 1.5rem 1.8rem;
 }
 .side-navbar .list-group .list-group-item:hover {
   background-color: #dbbb11;
