--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -430,31 +430,57 @@ body {
 .side-navbar .list-group .list-group-item {
   transition: width 0.3s;
   margin: 0.5rem 0px;
-  display:flex;
+  display: flex;
   align-items: center;
   padding: 1.5rem 0rem 1.5rem 1.8rem;
+  width: 95%;
+  height: 100%;
 }
-.side-navbar .list-group .list-group-item:hover {
-  background-color: #dbbb11;
+/* .side-navbar .list-group .list-group-item:hover {
+  background-color: #f1d648;
   color: #000;
   border: none;
   font-weight: bold;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   z-index: 1;
-  width: 95%;
-  height: 95%;
+  width: 100%;
+} */
+.side-navbar .list-group{
+  display: flex;
+  flex-direction: column;
+}
+.side-navbar .list-group .list-group-item.active,
+.side-navbar .list-group .list-group-item:hover {
+  background-color: #f1d648;
+  color: #000;
+  border: none;
+  z-index: 1;
+  width: 100%;
+  /* height: 95%; */
 }
 .side-navbar .list-group .list-group-item.active {
-  background-color: #dbbb11;
-  color: #000;
-  border: none;
-  font-weight: bold;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  z-index: 1;
-  width: 95%;
-  height: 95%;
+  font-weight: bold;
 }
-.side-navbar .list-group .list-group-item:hover:before {
+.order-invoice-wrapper{
+  order: unset;
+}
+@media (max-width: 992px) {
+  .order-invoice-wrapper{
+  order: -1;
+}
+}
+@media (max-width: 992px) {
+  .side-navbar .list-group{
+    display: flex;
+    flex-direction: row;
+  }
+  .side-navbar .list-group .list-group-item{
+    margin-right: 1rem;
+  padding: 1.5rem 1rem;
+  }
+}
+/* .side-navbar .list-group .list-group-item:hover:before {
   content: "";
   position: absolute;
   width: 100%;
@@ -473,7 +499,7 @@ body {
   top: 5%;
   left: 5%;
   z-index: -1;
-}
+} */
 
 .recent-odrder-list {
   height: 500px;
