--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -597,3 +597,9 @@ body {
     display: none;
   }
 }
+
+.custom-file-label.rounded-pill::after{
+  padding-right: .6em;
+  padding-left: .6em;
+  border-radius: 10rem;
+}
